# SpdlogWrapper

./: .gitignore  CMakeLists.txt  ReadMe.md
app/: main.cpp
cmake/: FindSPDLOG.cmake
include/: dh_global.h  dh_instance.hpp  dh_myspdlog.h
misc/: dh_myspdlog.cpp
